--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "rollup": "^4.5.1"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-terser": "^0.4.4",
     "d3": "^7.8.5"
   }
 }
