--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-terser": "^0.4.4",
-    "d3": "^7.8.5"
+    "d3": "^7.8.5",
+    "js-yaml": "^4.1.0"
   }
 }
