Sorted out specification and propagation of default values

--- a/data/rockstrom2009.yaml
+++ b/data/rockstrom2009.yaml
@@ -1,84 +1,81 @@
 canvas:
   width_px: 800 # pixels
   height_px: 600 # pixles
-defaults:
-  - angle_origin: 0 # Base angle from which others are measured
-  - angle_delta: 0 # Base angle from which others are measured
-  - radius_px: 150 # 1 chart unit in pixels
-  - radius_real: 400 # real world units corresponding to 1 chart unit
-  - opacity: 1
+  angle_origin: 0 # Base angle from which others are measured
+  angle_delta: 0 # Base angle from which others are measured
+  radius_px: 150 # 1 chart unit in pixels
+  radius_real: 400 # real world units corresponding to 1 chart unit
 charts:
-  - id: chart1
+  - id: rockstrom2009
     images:
-    - id: rock0 
+    - id: earth 
       location: images/rockstrom-earth.png
-      width: 0 200 0 %
-      rot: 0 270 0
+      width: 0 100 0 %
       opacity: 0 1 0
     arcs:
-    - id: default
-      colour: red
-      rad1: 0
-    - id: climate-change
-      rad2: 0 60 0 %
-      ang1: 100
-      ang2: 160
-    - id: ocean-acidification
-      rad2: 0 30 0 %
-      ang1: 0
-      ang2: 0 80 0
-  - id: chart2
-    images:
-    - id: rock 
-      location: images/rockstrom-earth.png
-      width: 0 200 0 %
-      opacity: 0 1 0
-    arcs:
-    - id: default
-      colour: red
-      rad1: 0
     - id: safe-zone
       colour: "#6D9100"
+      rad1: 0
       rad2: 0 40 0 %
       ang1: 0
       ang2: 360
     - id: climate-change
+      colour: red
+      rad1: 0
       rad2: 0 60 0 %
       ang1: 0
       ang2: 40
     - id: ocean-acidification
+      colour: red
+      rad1: 0
       rad2: 0 30 0 %
       ang1: 40
       ang2: 80
     - id: ozone-depletion
+      colour: red
+      rad1: 0
       rad2: 0 16 0 %
       ang1: 80
       ang2: 120
     - id: nitrogen-cycle
+      colour: red
+      rad1: 0
       rad2: 0 132 0 %
       ang1: 120
       ang2: 140
     - id: phosphorous-cycle
+      colour: red
+      rad1: 0
       rad2: 0 36 0 %
       ang1: 140
       ang2: 160
     - id: freshwater-use
+      colour: red
+      rad1: 0
       rad2: 0 22 0 %
       ang1: 160
       ang2: 200
     - id: landuse-change
+      colour: red
+      rad1: 0
       rad2: 0 24 0 %
       ang1: 200
       ang2: 240
     - id: biodiversity-loss
+      colour: red
+      rad1: 0
       rad2: 0 160 0 %
       ang1: 240
       ang2: 280
     - id: aerosol-loading
+      colour: red
+      rad1: 0
       rad2: 0
       ang1: 280
       ang2: 320
     - id: chemical-pollution
+      colour: red
+      rad1: 0
       rad2: 0
       ang1: 320
       ang2: 360
@@ -95,16 +92,19 @@ charts:
       ang1: 0
       ang2: 360
     - id: zone-3
+      colour: red
       rad1: 59 %
       rad2: 60 %
       ang1: 0
       ang2: 360
     - id: zone-4
+      colour: red
       rad1: 79 %
       rad2: 80 %
       ang1: 0
       ang2: 360
     - id: zone-5
+      colour: red
       rad1: 99 %
       rad2: 100 %
       ang1: 0
