--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-terser": "^0.4.4",
     "d3": "^7.8.5",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "roughjs": "^4.6.6"
   }
 }
