--- a/doughnut/data/rockstrom2009.yaml
+++ b/doughnut/data/rockstrom2009.yaml
@@ -6,25 +6,54 @@ globals:
   defs:
     - def: |
         <filter id="whiteOutlineEffect" color-interpolation-filters="sRGB">
-        <feMorphology in="SourceAlpha" result="MORPH" operator="dilate" radius="1" />
-        <feColorMatrix in="MORPH" result="WHITENED" type="matrix" values="-1 0 0 0 1, 0 -1 0 0 1, 0 0 -1 0 1, 0 0 0 1 0"/>
-        <feMerge>
-        <feMergeNode in="WHITENED"/>
-        <feMergeNode in="SourceGraphic"/>
-        </feMerge>
+          <feMorphology in="SourceAlpha" result="MORPH" operator="dilate" radius="1" />
+
+          <feColorMatrix in="MORPH" result="WHITENED" type="matrix" values="-1 0 0 0 1, 0 -1 0 0 1, 0 0 -1 0 1, 0 0 0 1 0"/>
+          
+          <feMerge>
+            <feMergeNode in="WHITENED"/>
+            <feMergeNode in="SourceGraphic"/>
+          </feMerge>
         </filter>
-defaults:
-  angle0: -20 # Base angle from which others are measured, e.g. -20
-  angleSpan: 0 # Angle unit to use for multiplier or percentage, e.g. 45
-  radiusSpanPx: 150 # Pixel unit to use for multiplier or percentage, e.g. 150
-  radiusSpanReal: 400 # Real world units corresponding to 1 pixel unit, e.g. 400
+    - def: |
+        <filter id="blackOutlineEffect">
+          <feMorphology in="SourceAlpha" result="MORPH" operator="dilate" radius="0.5" />
+          
+          <feColorMatrix in="MORPH" result="WHITENED" type="matrix" values="0 0 0 0 0.3, 0 0 0 0 0.3, 0 0 0 0 0.3, 0 0 0 1 0"/>
+
+          <feMerge>
+              <feMergeNode in="OUTLINE" />
+              <feMergeNode in="SourceGraphic" />
+          </feMerge>
+        </filter>
+    - def: |
+        <filter id="greenOutlineEffect">
+          <feMorphology in="SourceAlpha" result="MORPH" operator="dilate" radius="1" />
+          
+          <feColorMatrix in="MORPH" result="WHITENED" type="matrix" values="0 0 0 0 0, 1 1 1 1 0, 0 0 0 0 0, 0 0 0 1 0"/>
+
+          <feMerge>
+              <feMergeNode in="OUTLINE" />
+              <feMergeNode in="SourceGraphic" />
+          </feMerge>
+        </filter>
+# defaults:
+#   angle0: -20 # Base angle from which others are measured, e.g. -20
+#   angleSpan: 40 # Angle unit to use for multiplier or percentage, e.g. 45
+#   radiusSpanPx: 150 # Pixel unit to use for multiplier or percentage, e.g. 150
+#   radiusSpanReal: 400 # Real world units corresponding to 1 pixel unit, e.g. 400
 charts:
   - id: rockstrom2009
+    defaults:
+      angle0: -20 # Base angle from which others are measured, e.g. -20
+      angleSpan: 40 # Angle unit to use for multiplier or percentage, e.g. 45
+      radiusSpanPx: 150 # Pixel unit to use for multiplier or percentage, e.g. 150
+      radiusSpanReal: 400 # Real world units corresponding to 1 pixel unit, e.g. 400
     images:
     - id: earth 
       location: images/rockstrom-earth.png
-      width: 200 %
-      opacity: 1
+      width: 200 200 80 %
+      opacity: 0 1 0
       rot: 0
       angle: 0
       radius: 0
@@ -35,54 +64,102 @@ charts:
       radius1: 0
     - id: safe-zone
       colour: '#6D9100'
-      radius2: 40 %
+      radius2: 40 40 0 %
       angle1: 0
       angle2: 360
-    - id: climate-change
-      radius2: 0 60 0 %
-      angle1: 0
-      angle2: 40
-    - id: ocean-acidification
-      radius2: 0 30 0 %
-      angle1: 40
-      angle2: 80
-    - id: ozone-depletion
-      radius2: 0 16 0 %
-      angle1: 80
-      angle2: 120
-    - id: nitrogen-cycle
-      radius2: 0 132 0 %
-      angle1: 120
-      angle2: 140
-    - id: phosphorous-cycle
-      radius2: 0 36 0 %
-      angle1: 140
-      angle2: 160
-    - id: freshwater-use
-      radius2: 0 22 0 %
-      angle1: 160
-      angle2: 200
-    - id: landuse-change
-      radius2: 0 24 0 %
-      angle1: 200
-      angle2: 240
-    - id: biodiversity-loss
-      radius2: 0 160 0 %
-      angle1: 240
-      angle2: 280
-    - id: aerosol-loading
+    - id: climate-1
+      radius1: 0 40 %
+      radius2: 0 60 %
+      angle1: 9 x
+      angle2: 10 x
+    - id: climate-1-i
+      radius2: 0 40 %
+      angle1: 9 x
+      angle2: 10 x
+    - id: ocean-1
+      radius1: 30 %
+      radius2: 30 %
+      angle1: 1 x
+      angle2: 2 x
+    - id: ocean-1-i
+      radius2: 0 30 %
+      angle1: 1 x
+      angle2: 2 x
+    - id: ozone-1
+      radius1: 16 %
+      radius2: 16 %
+      angle1: 2 x
+      angle2: 3 x
+    - id: ozone-1-i
+      radius2: 0 16 %
+      angle1: 2 x
+      angle2: 3 x
+    - id: biochem-1
+      radius1: 0 40 %
+      radius2: 0 132 %
+      angle1: 3 x
+      angle2: 3.5 x
+    - id: biochem-1-i
+      radius2: 0 40 %
+      angle1: 3 x
+      angle2: 3.5 x
+    - id: biochem-2
+      radius1: 36 %
+      radius2: 36 %
+      angle1: 3.5 x
+      angle2: 4 x
+    - id: biochem-2-i
+      radius2: 0 36 %
+      angle1: 3.5 x
+      angle2: 4 x
+    - id: freshwater-1
+      radius1: 22 %
+      radius2: 22 %
+      angle1: 4 x
+      angle2: 5 x
+    - id: freshwater-1-i
+      radius2: 0 22 %
+      angle1: 4 x
+      angle2: 5 x
+    - id: land-systems-1
+      radius1: 24 %
+      radius2: 24 %
+      angle1: 5 x
+      angle2: 6 x
+    - id: land-systems-1-i
+      radius2: 0 24 %
+      angle1: 5 x
+      angle2: 6 x
+    - id: biosphere-1
+      radius1: 0 40 %
+      radius2: 0 160 %
+      angle1: 6 x
+      angle2: 7 x
+    - id: biosphere-1-i
+      radius2: 0 40 %
+      angle1: 6 x
+      angle2: 7 x
+    - id: aerosol-1
       radius2: 0
-      angle1: 280
-      angle2: 320
-    - id: chemical-pollution
+      angle1: 7 x
+      angle2: 8 x
+    - id: aerosol-1-i
       radius2: 0
-      angle1: 320
-      angle2: 360
+      angle1: 7 x
+      angle2: 8 x
+    - id: novel-1
+      radius2: 0
+      angle1: 8 x
+      angle2: 9 x
+    - id: novel-1-i
+      radius2: 0
+      angle1: 8 x
+      angle2: 9 x
     arclines: 
     - id: default
       stroke: red
-      stroke-width: 0.7
-      opacity: 0.9
+      strokeWidth: 0.7
+      opacity: 0 0.9 0
     - id: zone-1
       stroke: '#A6D800'
       radius: 20 %
@@ -93,6 +170,7 @@ charts:
       radius: 40 %
       angle1: 0
       angle2: 360
+      strokeDasharray: '2-0'
     - id: zone-3
       radius: 60 %
       angle1: 0
@@ -108,7 +186,7 @@ charts:
     spokes:
     - id: default
       stroke: black
-      stroke-width: 0.7
+      strokeWidth: 0.7
     - id: spoke1a
       angle: 0
       radius1: 0
@@ -117,167 +195,385 @@ charts:
       angle: 0
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke2a
-      angle: 40
+      angle: 1 x
       radius1: 0
       radius2: 100 %
     - id: spoke2b
-      angle: 40
+      angle: 1 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke3a
-      angle: 80
+      angle: 2 x
       radius1: 0
       radius2: 100 %
     - id: spoke3b
-      angle: 80
+      angle: 2 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke4a
-      angle: 120
+      angle: 3 x
       radius1: 0
       radius2: 100 %
     - id: spoke4b
-      angle: 120
+      angle: 3 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke5a
-      angle: 160
+      angle: 4 x
       radius1: 0
       radius2: 100 %
     - id: spoke5b
-      angle: 160
+      angle: 4 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke6a
-      angle: 200
+      angle: 5 x
       radius1: 0
       radius2: 100 %
     - id: spoke6b
-      angle: 200
+      angle: 5 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke7a
-      angle: 240
+      angle: 6 x
       radius1: 0
       radius2: 100 %
     - id: spoke7b
-      angle: 240
+      angle: 6 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke8a
-      angle: 280
+      angle: 7 x
       radius1: 0
       radius2: 100 %
     - id: spoke8b
-      angle: 280
+      angle: 7 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     - id: spoke9a
-      angle: 320
+      angle: 8 x
       radius1: 0
       radius2: 100 %
     - id: spoke9b
-      angle: 320
+      angle: 8 x
       radius1: 100 %
       radius2: 120 %
-      stroke-dasharray: 1
+      strokeDasharray: 1
     texts:
     - id: default
       radius: 103 %
       fontSize: 9
+      fontFamily: arial
+      fontFilter: whiteOutlineEffect
       opacity: 0 1 0
-    - id: climate-chage
+    - id: climate-1
       text: Climate change
-      angle1: 0
-      angle2: 40
-    - id: ocean-acidification
+      angle1: 9 x
+      angle2: 10 x
+    - id: ocean-1
       text: Ocean acidification
-      angle1: 40
-      angle2: 80
-    - id: ozone-depletion-1
+      angle1: 1 x
+      angle2: 2 x
+    - id: ozone-1-a
       text: Stratospheric
       radius: 111 %
-      angle1: 80
-      angle2: 120
-    - id: ozone-depletion-2
+      angle1: 2 x
+      angle2: 3 x
+    - id: ozone-1-b
       text: ozone depletion
-      angle1: 80
-      angle2: 120
-    - id: nk-cycle-1
+      angle1: 2 x
+      angle2: 3 x
+    - id: biochem-1-a
       radius: 126 %
       text: Nitrogen
-      angle1: 120
-      angle2: 140
-    - id: nk-cycle-2
+      angle1: 3 x
+      angle2: 3.5 x
+    - id: biochem-1-b
       radius: 119 %
       text: cycle
-      angle1: 120
-      angle2: 140
-    - id: nk-cycle-3
+      angle1: 3 x
+      angle2: 3.5 x
+    - id: biochem-2-a
       radius: 126 %
       text: Phosphorous
-      angle1: 140
-      angle2: 160
-    - id: nk-cycle-4
+      angle1: 3.5 x
+      angle2: 4 x
+    - id: biochem-2-b
       radius: 119 %
       text: cycle
-      angle1: 140
-      angle2: 160
-    - id: nk-cycle-5
+      angle1: 3.5 x
+      angle2: 4 x
+    - id: biochem-0-a
       radius: 110 %
       text: (biogeochemical
-      angle1: 120
-      angle2: 160
-    - id: nk-cycle-6
+      angle1: 3 x
+      angle2: 4 x 
+    - id: biochem-0-b
       text: flow boundary)
-      angle1: 120
-      angle2: 160
-    - id: freshwater-use-1
+      angle1: 3 x
+      angle2: 4 x
+    - id: freshwater-1-a
       radius: 110 %
       text: Global
-      angle1: 160
-      angle2: 200
-    - id: freshwater-use-2
+      angle1: 4 x
+      angle2: 5 x
+    - id: freshwater-1-b
       text: freshwater use
-      angle1: 160
-      angle2: 200
-    - id: landuse-change
+      angle1: 4 x
+      angle2: 5 x
+    - id: land-systems-1
       text: Change in land use
-      angle1: 200
-      angle2: 240
-    - id: biodiversity-loss
+      angle1: 5 x
+      angle2: 6 x
+    - id: biosphere-1
       text: Biodiversity loss
-      angle1: 240
-      angle2: 280
-    - id: aerosol-loading-1
+      angle1: 6 x
+      angle2: 7 x
+    - id: aerosol-1-a
       text: Atmospheric
       radius: 117 %
-      angle1: 280
-      angle2: 320
-    - id: aerosol-loading-2
+      angle1: 7 x
+      angle2: 8 x
+    - id: aerosol-1-b
       text: aerosol loading
       radius: 110 %
-      angle1: 280
-      angle2: 320
-    - id: aerosol-loading-3
+      angle1: 7 x
+      angle2: 8 x
+    - id: aerosol-1-c
       text: (not yet quantified)
-      angle1: 280
-      angle2: 320
-    - id: chemical-pollution-1
-      text: Ocean acidification
+      angle1: 7 x
+      angle2: 8 x
+    - id: novel-1-a
+      text: Chemical pollution
       radius: 110 %
-      angle1: 320
-      angle2: 360
-    - id: chemical-pollution-2
+      angle1: 8 x
+      angle2: 9 x
+    - id: novel-1-b
       text: (not yet quantified)
-      angle1: 320
-      angle2: 360
+      angle1: 8 x
+      angle2: 9 x
+  - id: rockstrom2009b
+    clone: rockstrom2009
+    defaults:
+      angle0: 0
+    images:
+    - id: earth 
+      width: 80 200 80 %
+    arcs:
+    - id: climate-1
+      angle1: 8 x
+      angle2: 9 x
+    - id: climate-1-i
+      angle1: 8 x
+      angle2: 9 x
+    - id: ocean-1
+      angle1: 3 x
+      angle2: 4 x
+    - id: ocean-1-i
+      angle1: 3 x
+      angle2: 4 x
+    - id: ozone-1
+      angle1: 1 x
+      angle2: 2 x
+    - id: ozone-1-i
+      angle1: 1 x
+      angle2: 2 x
+    - id: biochem-1
+      angle1: 4 x
+      angle2: 4.5 x
+    - id: biochem-1-i
+      angle1: 4 x
+      angle2: 4.5 x
+    - id: biochem-2
+      angle1: 4.5 x
+      angle2: 5 x
+    - id: biochem-2-i
+      angle1: 4.5 x
+      angle2: 5 x
+    - id: freshwater-1
+      angle1: 5 x
+      angle2: 6 x
+    - id: freshwater-1-i
+      angle1: 5 x
+      angle2: 6 x
+    - id: land-systems-1
+      angle1: 6 x
+      angle2: 7 x
+    - id: land-systems-1-i
+      angle1: 6 x
+      angle2: 7 x
+    - id: biosphere-1
+      angle1: 7 x
+      angle2: 8 x
+    - id: biosphere-1-i
+      angle1: 7 x
+      angle2: 8 x
+    - id: aerosol-1
+      angle1: 2 x
+      angle2: 3 x
+    - id: aerosol-1-i
+      angle1: 2 x
+      angle2: 3 x
+    - id: novel-1
+      angle1: 9 x
+      angle2: 10 x
+    - id: novel-1-i
+      angle1: 9 x
+      angle2: 10 x
+    texts:
+    - id: climate-1
+      text: Climate change
+      angle1: 8 x
+      angle2: 9 x
+    - id: ocean-1
+      text: Ocean acidification
+      angle1: 3 x
+      angle2: 4 x
+    - id: ozone-1-a
+      text: Stratospheric
+      radius: 111 %
+      angle1: 1 x
+      angle2: 2 x
+    - id: ozone-1-b
+      text: ozone depletion
+      angle1: 1 x
+      angle2: 2 x
+    - id: biochem-1-a
+      radius: 126 %
+      text: Nitrogen
+      angle1: 4 x
+      angle2: 4.5 x
+    - id: biochem-1-b
+      radius: 119 %
+      text: cycle
+      angle1: 4 x
+      angle2: 4.5 x
+    - id: biochem-2-a
+      radius: 126 %
+      text: Phosphorous
+      angle1: 4.5 x
+      angle2: 5 x
+    - id: biochem-2-b
+      radius: 119 %
+      text: cycle
+      angle1: 4.5 x
+      angle2: 5 x
+    - id: biochem-0-a
+      radius: 110 %
+      text: (biogeochemical
+      angle1: 4 x
+      angle2: 5 x 
+    - id: biochem-0-b
+      text: flow boundary)
+      angle1: 4 x
+      angle2: 5 x
+    - id: freshwater-1-a
+      radius: 110 %
+      text: Global
+      angle1: 5 x
+      angle2: 6 x
+    - id: freshwater-1-b
+      text: freshwater use
+      angle1: 5 x
+      angle2: 6 x
+    - id: land-systems-1
+      text: Change in land use
+      angle1: 6 x
+      angle2: 7 x
+    - id: biosphere-1
+      text: Biodiversity loss
+      angle1: 7 x
+      angle2: 8 x
+    - id: aerosol-1-a
+      text: Atmospheric
+      radius: 117 %
+      angle1: 2 x
+      angle2: 3 x
+    - id: aerosol-1-b
+      text: aerosol loading
+      radius: 110 %
+      angle1: 2 x
+      angle2: 3 x
+    - id: aerosol-1-c
+      text: (not yet quantified)
+      angle1: 2 x
+      angle2: 3 x
+    - id: novel-1-a
+      text: Chemical pollution
+      radius: 110 %
+      angle1: 9 x
+      angle2: 10 x
+    - id: novel-1-b
+      text: (not yet quantified)
+      angle1: 9 x
+      angle2: 10 x
+  - id: rockstrom2009c
+    clone: rockstrom2009b
+    images:
+    - id: earth
+      remove: true
+    - id: earth2
+      location: images/stockholm-earth.png
+      width: 80 %
+      opacity: 0 1 0
+      rot: 0
+      radius: 0
+      angle: 0
+    arcs:
+    - id: default
+      colour: orange
+    - id: safe-zone
+      remove: true
+    - id: climate-1-i
+      colour: green
+    - id: ocean-1-i
+      colour: green
+    - id: ozone-1-i
+      colour: green
+    - id: biochem-1-i
+      colour: green
+    - id: biochem-2-i
+      colour: green
+    - id: freshwater-1-i
+      colour: green
+    - id: land-systems-1-i
+      colour: green
+    - id: biosphere-1
+      radius2: 120 %
+    - id: biosphere-1-i
+      colour: green
+    - id: aerosol-1-i
+      colour: green
+    - id: novel-1-i
+      colour: green
+    arclines:
+    - id: zone-1
+      remove: true
+    - id: zone-2
+      stroke: black
+      strokeDasharray: 2
+    - id: zone-3
+      remove: true
+    - id: zone-4
+      remove: true
+    - id: zone-5
+      remove: true
+    texts:
+    - id: safe-space
+      radius: 35 %
+      text: Safe operating space
+      angle1: 8 x
+      angle2: 10 x
+      fontSize: 7
+      fontColour: white
+      fontFilter: blackOutlineEffect
+      opacity: 0 1
